Bug 272666 - virtual desktop names are loosed after log out
Summary: virtual desktop names are loosed after log out
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Lübking
URL:
Keywords:
: 272832 273002 273049 274181 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-07 02:34 UTC by Balcaen John
Modified: 2011-05-26 19:50 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.4
Sentry Crash Report:


Attachments
fix (869 bytes, patch)
2011-05-07 22:33 UTC, Thomas Lübking
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Balcaen John 2011-05-07 02:34:30 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

Since KDE SC 4.6.3 the virtual desktop name are loose on log out & restore to default.

Reproducible: Always

Steps to Reproduce:
Change the virtual desktop name
Log out
Log in

Actual Results:  
You'll end up with the default virtual desktop name

Expected Results:  
It should keep the name set before.
Comment 2 Thomas Lübking 2011-05-07 16:56:48 UTC
Weird but probably - gonna check.
Comment 3 Thomas Lübking 2011-05-07 22:33:32 UTC
Created attachment 59746 [details]
fix

yes, is ... qnd (tm) patch attached
Comment 4 Balcaen John 2011-05-08 05:19:44 UTC
Fixed with your patch.
Thanks.
Comment 5 Thomas Lübking 2011-05-08 16:16:58 UTC
Git commit a2d4c3ebdf7137f3543c88245f0bfd3dba308ebf by Thomas Lübking.
Committed on 08/05/2011 at 16:27.
Pushed by luebking into branch 'KDE/4.6'.

Don't store virtual desktop settings while loading them

BUG: 272666
FIXED-IN: 4.6.4

M  +5    -0    kwin/workspace.cpp     

http://commits.kde.org/kde-workspace/a2d4c3ebdf7137f3543c88245f0bfd3dba308ebf
Comment 6 Thomas Lübking 2011-05-08 17:03:41 UTC
Git commit 87c5aff4250995903080b4d12c7d00ac998ce875 by Thomas Lübking.
Committed on 08/05/2011 at 17:14.
Pushed by luebking into branch 'master'.

Don't store virtual desktop settings while loading them

fwd-port of a2d4c3ebdf7137f3543c88245f0bfd3dba308ebf
CCBUG: 272666

M  +5    -0    kwin/workspace.cpp     

http://commits.kde.org/kde-workspace/87c5aff4250995903080b4d12c7d00ac998ce875
Comment 7 Christoph Feck 2011-05-10 02:07:41 UTC
*** Bug 272832 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2011-05-11 21:36:30 UTC
*** Bug 273049 has been marked as a duplicate of this bug. ***
Comment 9 Martin Flöser 2011-05-25 18:39:58 UTC
*** Bug 273002 has been marked as a duplicate of this bug. ***
Comment 10 Thomas Lübking 2011-05-26 16:06:57 UTC
*** Bug 274181 has been marked as a duplicate of this bug. ***
Comment 11 Anton Aylward 2011-05-26 19:11:03 UTC
No, this hasn't fixed the problem for me.

What I's seeing is

1.  The layout of the widgets on my "plain desktop" is
    now remembered between sessions.  This *HAS* been fixed :-)

2.  The names of the screens in the pager are not remembered
    between sessions

3.  The "recvently used" programs in the kickoff application
    launcher are not remembered between sessions.

Are these part of kwin?  Possibly not,
Comment 12 Thomas Lübking 2011-05-26 19:50:32 UTC
You've probably a permission problem in ~/.kde
This bug and the dupes are *only* about a temporary regression in kwin that was introduced when fixing a segfaulter.
The problem was that kwin started to write the desktop config while it was loading it (and before having the proper values)

This issue *is* fixed in branch and master ;-)
Anything else (a "wider" problem, probably not even limited to a particular KDE version?) is a different bug or a system misconfiguration on your side and not (necessarily) kwin related.

"What is being restored seems to be settings from a week or more ago, those
settings and items on the panel and systray."

There are three causes for this (depending on your issue)
a) insufficient permissions (do "sudo chown -R <your_username>:<your_username> ~/.kde; chmod -R u+w ~/.kde" - NOTICE that <username> shall be your login and that ~/.kde might as well be ~/.kde4
b) ~/.kde vs. ~/.kde4 messup - ask your distro if you've got both directories
c) "wrong" session configuration, run "kcmshell4 kcmsmserver" - you'll be able to configure how sessions shall be stored