Don't store virtual desktop settings while loading them

BUG: 272666
FIXED-IN: 4.6.4